maze.lessons.maze.island.IslandMaze.scala.error
Escaper:11: error: not found: value y
override def run() {setDirection(Direction.NORTH);while (y!=0) {while (!estFaceMur()) {avance()};while (aMurN()) {garM()}};while (!estSurBiscuit()) {garM()};prendBiscuit()} 
                                                         ^